--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gtnapi"
-version = "0.0.5"
+version = "0.0.7"
 description = "Python Software Developement Kit for GTN Fintech API"
 dependencies = [
     "requests",
@@ -17,15 +17,13 @@ authors = [
     { name = "Uditha Nagahawatta", email = "n.uditha@gtngroup.com" },
 ]
 maintainers = [
-    { name = "Fintech API Team", email = "fintechapi-dev@gtngroup.com" },
+    { name = "Fintech API Team", email = "embed-pypi@gtngroup.com" },
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -38,19 +36,12 @@ classifiers = [
 keywords = ["GTN API"]
 
 [project.urls]
-Homepage = "https://github.com/gtn/python-sdk.git"
-Download = "https://github.com/gtn/python-sdk.git/releases"
-Documentation = "https://github.com/gtn/python-sdk.git/README.md"
-Source = "https://github.com/gtn/python-sdk.git"
+Homepage = "https://github.com/GTN-Tech/python-sdk"
+Documentation = "https://github.com/GTN-Tech/python-sdk"
+Source = "https://github.com/GTN-Tech/python-sdk.git"
 
 [project.optional-dependencies]
 test = ["pytest", "websockets"]
 optional = ["python-socks", "wsaccel"]
 docs = [
-    "Sphinx >= 6.0",
-    "sphinx_rtd_theme >= 1.1.0",
-    "myst-parser >= 2.0.0"
 ]
-
-[project.entry-points.console_scripts]
-wsdump = "websocket._wsdump:main"
