--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "gtnapi"
-version = "0.0.7"
+name = "gtn-embed-sdk"
+version = "0.0.9"
 description = "Python Software Developement Kit for GTN Fintech API"
 dependencies = [
     "requests",
@@ -20,10 +20,9 @@ maintainers = [
     { name = "Fintech API Team", email = "embed-pypi@gtngroup.com" },
 ]
 readme = "README.md"
-license = { file = "LICENSE" }
+license-files = ["LICENSE"]
 classifiers = [
     "Development Status :: 4 - Beta",
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -45,3 +44,7 @@ test = ["pytest", "websockets"]
 optional = ["python-socks", "wsaccel"]
 docs = [
 ]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["gtnapi*"]
